[metadata]
description = RACK ScrapingToolKit
name = ScrapingToolKit
version = 0.1

[options]
include_package_data = True
install_requires =
    colorama
    ftfy
    graphviz
    lxml
    plotly
package_dir =
    = .
packages =
    AutoGeneration
    Evidence
    Logging
    XML
scripts =
    AutoGeneration/GenerateSTK.py
    TestSTK.py
    TestSysML.py

[options.extras_require]
dev:
    black
    mypy ~= 0.812
    pylint
    rope

[options.packages.find]
where = .

[options.package_data]
Evidence =
    Add.py
    CONSTANTS.py
    RACK-DATA.xsd
