[metadata]
name = RACK migration tool suite
version = 0.1
description = Helps capturing changes to the RACK ontology
author = Valentin Robert
author_email = val@galois.com

[options]
install_requires =
    colorama
    pydantic
    typing-extensions
packages = find:
scripts =
    rack_crawl/rack_crawl
    rack_migrate/rack_migrate

[options.extras_require]
dev:
    black
    mypy ~= 0.812
    mypyls @ git+https://github.com/matangover/mypyls.git#egg=mypyls
    pylint
    rope
    types-colorama
    wheel
