[metadata]
name = RACK migration tool suite
version = 0.1
description = Migrate your ontology files across versions of our ontology
author = Valentin Robert
author_email = val@galois.com

[options]
install_requires =
    colorama
    pydantic
packages = find:
scripts =
    rack_crawl/rack_crawl
    rack_migrate/rack_migrate

[options.extras_require]
dev:
    black
    pylint
    pyright
    rope
    wheel
