[metadata]
name = RACK migration tool suite
version = 0.1
description = Migrate your ontology files across versions of our ontology
author = Valentin Robert
author_email = val@galois.com

[options]
install_requires =
    colorama
    pydantic
packages = find:
scripts =
    rack_crawl/rack_crawl
    rack_migrate/rack_migrate

[options.extras_require]
dev:
    black
    mypy
    pylint
    rope
    wheel

[mypy]

disallow_incomplete_defs = True
disallow_untyped_defs = True

exclude = build

files =
    git_helpers,
    migration_helpers,
    ontology_changes,
    rack,
    rack_crawl,
    rack_migrate,
    semtk

mypy_path=
    typeshed

no_implicit_optional = True

plugins = pydantic.mypy

warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-git.*]
ignore_errors = True

[mypy-setuptools.*]
ignore_errors = True
