[metadata]
name = data_shape
version = 0.1
description = RACK data shape
author = Eric Mertens
author_email = emertens@galois.com

[options]
install_requires =
    SPARQLWrapper
    graphviz
package_dir =
    = bin
packages = find:
scripts =
    bin/data_shape
    bin/collaboration
zip_safe = False

[options.packages.find]
where = bin
